--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button onclick="gridPrompt()">New Grid</button>
     <div id = "container"></div>
 </body>
 </html>
